# django-templates

./: .env.dist  .gitignore  LICENSE  README.md  pyproject.toml
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: context_processors.py  urls.py  views.py
apps/core/templatetags/: message_themes.py
apps/locale/en/: formats.py
config/: settings.py  urls.py
requirements/: requirements-dev.txt  requirements-prod.txt
static/src/css/: styles.css  tailwind.config.js  tailwind.css
templates/: base.html
templates/accounts/: change_password.html  login.html
templates/core/: index.html
templates/shared/: breadcrumbs.html  navbar.html  sidebar.html
